[package]
name = "chess-ai-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence"
]}
egui_extras = { version = "0.23.0", features = ["all_loaders"]}
log = "0.4"


# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
shakmaty = "0.26.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
