[package]
name = "chess-ai-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence"
]}
egui_extras = { version = "0.23.0", features = ["all_loaders"]}
log = "0.4"
web_types = { git = "https://github.com/danya02/nn-chess-backend.git" }
shakmaty = "0.26.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
pollster = "0.3.0"
oneshot = "0.1.6"
tokio = { version = "1.33.0", features = ["sync"] }
anyhow = "1.0.75"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
